Made Create View, working on HeroController

--- a/FordSuperheroes/FordSuperheroes/Views/Home/Index.cshtml
+++ b/FordSuperheroes/FordSuperheroes/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome, Super Hero fan!</h1>
+    <p>Check out my list of heroes! You can edit them if you'd like or add your own!</p>
 </div>
