--- a/FordSuperheroes/FordSuperheroes/Views/Hero/HeroIndex.cshtml
+++ b/FordSuperheroes/FordSuperheroes/Views/Hero/HeroIndex.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<FordSuperheroes.Models.Hero>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "HeroIndex";
     Layout = "Index";
 }
 
