Cleared up the code causing the consistent error

--- a/FordSuperheroes/FordSuperheroes/Views/Hero/Index.cshtml
+++ b/FordSuperheroes/FordSuperheroes/Views/Hero/Index.cshtml
@@ -1,8 +1,7 @@
 ﻿@model IEnumerable<FordSuperheroes.Models.Hero>
 
 @{
-    ViewData["Title"] = "Index";
-    Layout = "Index";
+    ViewData["Title"] = "View";
 }
 
 <h1>View</h1>
