Updated privacy policy. Added some heroes to the list. Tested links, create, edit, and delete, checked for spelling and grammatical errors.

--- a/FordSuperheroes/FordSuperheroes/Views/Home/Privacy.cshtml
+++ b/FordSuperheroes/FordSuperheroes/Views/Home/Privacy.cshtml
@@ -3,4 +3,7 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>This site isn't super private! Go nuts! You can head to the Hero List below.</p>
+<tr>
+    <td><a href="/Hero/Index" width="150">Hero List</a> </td>
+</tr>
