--- a/FordSuperheroes/FordSuperheroes/Views/Home/Index.cshtml
+++ b/FordSuperheroes/FordSuperheroes/Views/Home/Index.cshtml
@@ -5,5 +5,11 @@
 <div class="text-center">
     <h1 class="display-4">Welcome, Super Hero fan!</h1>
     <p>Check out my list of heroes! You can edit them if you'd like or add your own!</p>
+    
     <img src ="https://cdn.vox-cdn.com/thumbor/Dj3DetdJigfiY-pS1F4ntLyzYS4=/0x0:1920x1079/920x613/filters:focal(1085x298:1391x604):format(webp)/cdn.vox-cdn.com/uploads/chorus_image/image/64773806/ply_dr_strange_graded.0.jpg" width="500"/>
+    
+    <tr>
+        <td><a href="/Hero/Index" width="150">Hero List</a> </td> 
+    </tr>
+    
 </div>
